# sdk-dslink-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListsConfig.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  WLS.md  WSL.md  cygwin.md  docker-compose.yml  install.sh
benchmark/: CMakeLists.txt  benchmark.cc  broker_requester.cc  broker_responder.cc  broker_throughput.cc  message_queue.cc  throughput.cc  throughput_client.cc  throughput_common.h  throughput_server.cc
example/: CMakeLists.txt
example/dslink/: basic.cc  single_thread.cc
example/requester/: requester.cc
example/responder/: responder.cc
playground/: CMakeLists.txt  playground.cc
src/: CMakeLists.txt
src/broker/: CMakeLists.txt  broker.cc  broker.h  broker_main.cc
src/broker/config/: broker_config.cc  broker_config.h  broker_config_item.cc  broker_config_item.h  broker_module_loader.cc  broker_module_loader.h  module_loader.cc  module_loader.h
src/broker/module/: broker_authorizer.cc  broker_authorizer.h  broker_client_manager.cc  broker_client_manager.h  broker_client_manager_config.cc  broker_client_manager_config.h  broker_client_nodes.cc  broker_client_nodes.h  broker_login_manager.cc  broker_login_manager.h  broker_security_manager.cc  broker_security_manager.h  broker_session_manager.cc  broker_session_manager.h  module_broker_default.cc  module_broker_default.h
src/broker/node/: broker_root.cc  broker_root.h  paths.h
src/broker/remote_node/: broker_client.cc  broker_client.h  broker_session_manager.cc  broker_session_manager.h  dynamic_children_parent.cc  dynamic_children_parent.h  invoke_proxy.cc  invoke_proxy.h  remote_node.cc  remote_node.h  remote_node_group.cc  remote_node_group.h  remote_root_node.cc  remote_root_node.h  set_proxy.cc  set_proxy.h
src/broker/upstream/: upstream_manager.cc  upstream_manager.h  upstream_nodes.cc  upstream_nodes.h
src/broker/v1/: v1_server_connection.cc  v1_server_connection.h  v1_session.cc  v1_session.h  v1_session_manager.cc  v1_session_manager.h
src/module_pack/: CMakeLists.txt
src/module_pack/logger/: file_logger.cc
src/sdk/: CMakeLists.txt  dsa_common.cc  dsa_common.h
src/sdk/core/: CMakeListsInclude.txt  app.cc  app.h  client.cc  client.h  client_info.h  config.cc  config.h  connection.cc  connection.h  editable_strand.cc  editable_strand.h  link_strand.cc  link_strand.h  message_stream.cc  message_stream.h  server.cc  server.h  session.cc  session.h  session_manager.cc  session_manager.h  shared_strand_ref.h  strand_timer.cc  strand_timer.h
src/sdk/crypto/: CMakeLists.txt  CMakeListsInclude.txt  crypto.h  ecdh.cc  ecdh.h  handshake_context.cc  handshake_context.h  hash.cc  hash.h  hmac.cc  hmac.h  misc.cc  misc.h
src/sdk/dslink/: CMakeListsInclude.txt  config_loader.cc  config_loader.h  dslink.cc  dslink.h  link.cc  link.h  link_root.cc  link_root.h  list_merger.cc  list_merger.h  subscribe_merger.cc  subscribe_merger.h
src/sdk/message/: CMakeLists.txt  CMakeListsInclude.txt  ack_message.cc  ack_message.h  base_message.cc  base_message.h  dynamic_header.cc  dynamic_header.h  enums.cc  enums.h  error_message.cc  error_message.h  message_factory.cc  message_factory.h  message_io_stream.cc  message_io_stream.h  message_options.cc  message_options.h  message_page_group.cc  message_page_group.cpp  message_page_group.h  message_type_gen.js  message_value.cc  message_value.h  parsed_message_value.cc  parsed_message_value.h  ping_message.cc  ping_message.h  static_header.cc  static_header.h  static_headers.cc  static_headers.h  subscribe_option.cc  subscribe_option.h
src/sdk/module/: CMakeListsInclude.txt  authorizer.h  client_manager.h  default_modules.cc  default_modules.h  logger.cc  logger.h  module.cc  module.h  module_loader.cc  module_loader.h  module_with_loader.cc  module_with_loader.h  outgoing_stream_acceptor.h  security_manager.h  session_manager.h  storage.cc  storage.h  stream_acceptor.cc  stream_acceptor.h
src/sdk/network/: CMakeLists.txt  CMakeListsInclude.txt  app.cc  app.h  base_socket_connection.cc  base_socket_connection.h  client.h  client_connection.cc  client_connection.h  connection.cc  connection.h  connection.hpp  gracefully_closable.cc  gracefully_closable.h  message_stream.cc  message_stream.h  security_context.cc  security_context.h  server.cc  server.h  server_connection.cc  server_connection.h  session.cc  session.h  session.hpp  session_manager.cc  session_manager.h  tcp_client.cc  tcp_client.h  tcp_connection.cc  tcp_connection.h  tcp_connection.hpp  tcp_server.cc  tcp_server.h  tcp_server.hpp
src/sdk/requester/: CMakeLists.txt  CMakeListsInclude.txt  incoming_message_stream.cc  incoming_message_stream.h  requester.cc  requester.h  subscription_stream.cc  subscription_stream.h
src/sdk/responder/: CMakeLists.txt  CMakeListsInclude.txt  invoke_node_model.cc  invoke_node_model.h  model_base.cc  model_base.h  node_model.cc  node_model.h  node_model.hpp  node_model_manager.cc  node_model_manager.h  node_model_manager.hpp  node_state.cc  node_state.h  node_state.hpp  node_state_manager.cc  node_state_manager.h  node_state_manager.hpp  outgoing_message_stream.cc  outgoing_message_stream.h  proposal.cc  responder.cc  responder.h  subscription_queue.h  subscroption_queue.hpp  value_node_model.cc  value_node_model.h
src/sdk/stream/: CMakeListsInclude.txt  ack_stream.cc  ack_stream.h  error_stream.cc  error_stream.h  incoming_message_stream.cc  incoming_message_stream.h  message_io_stream.cc  message_io_stream.h  outgoing_message_stream.cc  outgoing_message_stream.h  outgoing_stream_accepter.h  ping_stream.cc  (+5 more)
test/: CMakeLists.txt  CMakeLists.txt.in  example.cc  util-test.cc  util-unittest.cc
test/broker/: CMakeListsInclude.txt
test/broker_dslink/: CMakeListsInclude.txt  broker_dslink_client_manager.cc  broker_dslink_list.cc  broker_dslink_node.cc  broker_dslink_profile.cc  broker_dslink_test.cc  broker_dslink_token.cc  broker_dslink_util.cc  broker_dslink_util.h
test/sdk/: CMakeLists.txt  async_test.cc  async_test.h  config-test.cc  test_config.cc  test_config.h
(+339 files in other folders)
